--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@babel/eslint-parser": "^7.11.5",
     "@babel/runtime-corejs3": "^7.11.2",
     "@jitesoft/babel-preset-main": "^2.5.3",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "core-js": "^3.6.5",
     "jest": "^26.4.2",
@@ -47,6 +47,6 @@
     "semistandard": "^14.2.3"
   },
   "semistandard": {
-    "parser": "babel-eslint"
+    "parser": "@babel/eslint-parser"
   }
 }
