--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,7 +10,9 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [12.x, 13.x, 14.x]
@@ -21,9 +23,11 @@ jobs:
       uses: actions/setup-node@v2.1.5
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install and test
-      run: |
-        npm install
-        npm test
+    - name: npm install
+      run: npm install
+    - name: npm run build
+      run: npm run build
+    - name: npm run test
+      run: npm run test
       env:
         CI: true
