--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "@personnummer/generate",
   "version": "1.0.2",
   "description": "Generate Swedish Personal Identity Numbers",
-  "main": "lib/cjs/index.js",
-  "module": "lib/esm/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types",
   "repository": {
     "type": "git",
     "url": "git://github.com/personnummer/js-generate.git"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "rimraf lib && rollup -c",
+    "build": "pine build",
     "lint": "semistandard --env jest src/*.js test.js",
-    "prepare": "npm run build",
-    "test": "jest"
+    "test": "pine test",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "personnummer",
@@ -31,22 +35,18 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/eslint-parser": "^7.13.10",
-    "@babel/runtime-corejs3": "^7.13.10",
-    "@jitesoft/babel-preset-main": "^2.8.1",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "babel-loader": "^8.2.2",
+    "@pinefile/pine": "^1.0.0-alpha.14",
+    "@types/jest": "^26.0.22",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "core-js": "^3.9.1",
+    "esbuild": "^0.11.2",
+    "esbuild-jest": "^0.5.0",
+    "eslint": "^7.23.0",
+    "is-ci": "^3.0.0",
     "jest": "^26.6.3",
     "personnummer": "^3.1.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.41.5",
-    "rollup-plugin-babel": "^4.4.0",
-    "semistandard": "^16.0.0"
-  },
-  "semistandard": {
-    "parser": "@babel/eslint-parser"
+    "typescript": "^4.2.3"
   }
 }
