--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
     "personnummer": "^3.1.3",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.4"
+  },
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/personnummer"
   }
 }
