--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "pine build",
-    "lint": "semistandard --env jest src/*.js test.js",
+    "lint": "eslint src --ext .ts",
     "test": "pine test",
     "prepublishOnly": "npm run build"
   },
@@ -37,8 +37,8 @@
   "devDependencies": {
     "@pinefile/pine": "^1.0.1",
     "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0-alpha.48",
+    "@typescript-eslint/parser": "^5.0.0-alpha.48",
     "core-js": "^3.18.2",
     "esbuild": "^0.13.4",
     "esbuild-jest": "^0.5.0",
