--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,6 +25,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install
       run: npm install
+    - name: npm run lint
+      run: npm run lint
     - name: npm run build
       run: npm run build
     - name: npm run test
