--- a/package.json
+++ b/package.json
@@ -35,19 +35,19 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@pinefile/pine": "^1.0.1",
+    "@pinefile/pine": "^1.1.0",
     "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.0.0-alpha.48",
-    "@typescript-eslint/parser": "^5.0.0-alpha.48",
-    "core-js": "^3.18.2",
-    "esbuild": "^0.13.4",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "core-js": "^3.18.3",
+    "esbuild": "^0.13.8",
     "esbuild-jest": "^0.5.0",
-    "eslint": "^8.0.0",
+    "eslint": "^8.0.1",
     "is-ci": "^3.0.0",
-    "jest": "^27.2.4",
+    "jest": "^27.3.1",
     "personnummer": "^3.1.4",
     "rimraf": "^3.0.2",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "funding": {
     "type": "opencollective",
