--- a/package.json
+++ b/package.json
@@ -36,17 +36,17 @@
   "license": "MIT",
   "devDependencies": {
     "@pinefile/pine": "^1.6.2",
-    "@types/jest": "^27.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "esbuild": "^0.14.26",
+    "@types/jest": "^28.1.8",
+    "@typescript-eslint/eslint-plugin": "5.33.0",
+    "@typescript-eslint/parser": "^5.34.0",
+    "esbuild": "^0.15.5",
     "esbuild-jest": "^0.5.0",
-    "eslint": "^8.11.0",
+    "eslint": "^8.22.0",
     "is-ci": "^3.0.1",
-    "jest": "^27.5.1",
+    "jest": "^28.1.3",
     "personnummer": "^3.1.4",
     "rimraf": "^3.0.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.7.4"
   },
   "funding": {
     "type": "opencollective",
