--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@frozzare/pkg": "^1.0.4",
     "@pinefile/pine": "^2.0.3",
     "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "5.51.0",
