--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "files": [
     "dist/**/*"
   ],
+  "engines": {
+    "node": "^18.18.0 || >=20.0.0"
+  },
   "scripts": {
     "build": "pine build",
     "lint": "eslint src --ext .ts",
