--- a/package.json
+++ b/package.json
@@ -42,14 +42,13 @@
     "@frozzare/pkg": "^1.0.7",
     "@pinefile/pine": "^2.0.3",
     "@types/jest": "^30.0.0",
-    "@typescript-eslint/eslint-plugin": "8.53.0",
-    "@typescript-eslint/parser": "^8.53.0",
     "eslint": "^9.39.2",
     "is-ci": "^4.1.0",
     "prettier": "^3.8.0",
     "personnummer": "^3.2.1",
     "rimraf": "^6.1.2",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.0",
     "vitest": "^4.0.17"
   },
   "funding": {
